syntax = "proto3";

package xyz.sigmalab.fptemplate.demov1.proto;

service Todo {
    rpc AddAll(stream TodoNewItem) returns (AddlAllResponse) {}
    rpc AddOne(TodoNewItem) returns (AddOneResponse) {}
}

message TodoNewItem {
    int64   org = 1;
    string  description = 2;
}

message TodoItem {
    int64   org = 1;
    int64   identity = 2;
    string  description = 3;
    TodoItemState   state = 4;
}

enum TodoItemState {
    TodoItemState_UNKNOWN = 0;
    TodoItemState_InList = 1;
    TodoItemState_Done = 2;
}

message Done {}

message Failure {
    int32   code = 1;
    string  desc = 2;
}

message AddlAllResponse {
    repeated TodoItem item = 1;
    Failure failure = 2;
}

message AddOneResponse {
    TodoItem item = 1;
    Failure failure = 2;
}

message TodoQueryItems {}
